# Pace-AI

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  cloud-setup.sh  plan.md  plan.packaging.md
docs/: coaching-questions-research.md  sync-architecture.md
garmin-mcp/: .env.example  README.md  pyproject.toml
garmin-mcp/src/garmin_mcp/: __init__.py  auth.py  client.py  config.py  server.py  workout_builder.py
garmin-mcp/tests/: conftest.py
garmin-mcp/tests/e2e/: test_server_startup.py
garmin-mcp/tests/integration/: test_server_tools.py
garmin-mcp/tests/unit/: test_auth.py  test_client.py  test_config.py  test_server.py  test_workout_builder.py
notion-mcp/: .env.example  .gitignore  README.md  pyproject.toml
notion-mcp/src/notion_mcp/: __init__.py  cache.py  client.py  (+2 more)
notion-mcp/tests/: conftest.py
pace-ai/: .env.example  README.md  pyproject.toml
pace-ai/docs/: references.md
pace-ai/src/pace_ai/: __init__.py  config.py  database.py  server.py
pace-ai/src/pace_ai/prompts/: __init__.py  coaching.py
pace-ai/src/pace_ai/resources/: __init__.py  claim_store.py  methodology.py
pace-ai/src/pace_ai/tools/: __init__.py  analysis.py  environment.py  goals.py  history.py  memory.py  profile.py  run_analysis.py  sync.py
pace-ai/tests/: conftest.py
pace-ai/tests/e2e/: test_server_startup.py
pace-ai/tests/integration/: test_server_tools.py
pace-ai/tests/llm_eval/: __init__.py  conftest.py  golden_responses.py  llm_client.py  profiles.py  rubrics.py  scoring.py  sweep.py  test_consistency.py  test_injury_risk.py  test_judge_calibration.py  test_race_readiness.py  test_weekly_plan.py
pace-ai/tests/unit/: test_analysis.py  test_claim_store.py  test_database.py  test_environment.py  test_eval_scoring.py  test_goals.py  test_history.py  test_history_db.py  test_memory.py  test_profile.py  test_prompts.py  test_resources.py  test_run_analysis.py  test_server.py  test_sync.py
research/: RESEARCH_PHASE1.md  SUMMARY.md  all_papers.json  build_claims_db.py  claims.db  claims_manifest.json  extract_claims.py  log.txt  manifest.json  progress_snapshot.txt
research/claims/: abbiss_2008_describing_understanding_pacing.json  achten_2004_fat_oxidation_optimization.json  acog_2020_pregnancy_exercise.json  alexander_2022_running_knee_sr.json  alfredson_1998_eccentric.json  almond_2005_hyponatremia_boston.json  almquist_2022_block_vs_traditional_cyclists.json  alvero-cruz_2020_predictive_models.json  alvero_cruz_2019_cooper_test_hm.json  alvero_cruz_2020_prediction_models_review.json  alves_2023_highintensity_warmup_5000m.json  anderson_2020_foot_strike.json  anderson_2022_step_rate.json  armstrong_2022_ots_complex_systems.json  attia_2021_navicular_stress_fracture_rts_sr_ma.json  bacon_2013_vo2max_hiit_meta.json  baker_2017_sweat_variability.json  balsalobre_2016_strength_re_meta.json  balsalobre_fernandez_2016_strength_re_elite_meta.json  barandun_2012_speed_bodyfat_marathon.json  barbieri_2024_detraining_consequences.json  barnes_2015_weighted_vest_strides_warmup.json  barnes_2015a_re_measurement_norms.json  barnes_2015b_strategies_improve_re.json  barnes_2019_racing_shoes_spikes.json  bassett_2000_limiting_factors_vo2max.json  baxter_2021_exercise_progression.json  beermann_2020_collegiate_runners_nutrition.json  behm_2016_stretching_performance.json  bellenger_2016_autonomic_monitoring.json  beneke_2011_lactate_diagnostics.json  berger_2024_limits_ultra.json  bertelsen_2018_start_to_run_distance_obese.json  besson_2022_sex_differences_endurance_running.json  beyer_2015_hsr_eccentric_achilles_rct.json  beyer_2015_hsr_vs_eccentric.json  billat_1999_interval_vo2max.json  billat_2001_interval_review.json  billat_2003_mlss_concept.json  blagrove_2018_strength_determinants_sr.json  (+468 more)
research/domains/: 5k_track_training.json  altitude_training.json  beginner_running.json  biomechanics_form.json  body_composition.json  carbohydrate_fueling.json  concurrent_training.json  cross_training.json  detraining.json  easy_recovery_running.json  female_physiology.json  foam_rolling_mobility.json  genetics_individual_response.json  half_marathon_training.json  heart_rate_training.json  heat_cold_environment.json  hrv_monitoring.json  hydration.json  injury_foot.json  injury_knee.json  injury_lower_leg.json  injury_prevention_general.json  injury_stress_fracture.json  interval_training.json  iron_bone_health.json  lactate_threshold.json  long_run_physiology.json  marathon_training.json  masters_running.json  mental_performance.json  nutrition_general.json  overtraining_recovery.json  pacing_strategy.json  periodisation.json  polarized_training.json  protein_runners.json  race_prediction.json  recovery_modalities.json  red_s.json  return_to_running.json  (+14 more)
research/raw/: 02-strava-pain-points.raw  03-coaching-platforms.raw
research/synthesized/: 03-race-prediction-models.md  05-injury-prevention.md
research_archive/raw/: 01-reddit-running-forums.raw  04-watch-forums-metrics.raw  05-beginner-vs-advanced.raw
research_archive/synthesized/: 01-reddit-running-forums.md  01-training-periodization.md  02-recovery-adaptation.md  02-strava-pain-points.md  03-coaching-platforms.md  04-nutrition-fueling.md  04-watch-forums-metrics.md  05-beginner-vs-advanced.md
strava-mcp/: .env.example  README.md  pyproject.toml
strava-mcp/src/strava_mcp/: __init__.py  auth.py  cache.py  client.py  config.py  server.py
strava-mcp/tests/: conftest.py
strava-mcp/tests/e2e/: test_server_startup.py
strava-mcp/tests/integration/: test_server_tools.py
strava-mcp/tests/unit/: test_auth.py  test_cache.py  test_client.py  test_config.py  test_server.py
ui/: app.py  config.py  context.py  plans.py  scheduling.py  sessions.py  templates.py
withings-mcp/: .env.example  README.md  pyproject.toml
withings-mcp/src/withings_mcp/: auth.py  client.py  config.py  server.py
withings-mcp/tests/: conftest.py
withings-mcp/tests/e2e/: test_server_startup.py
withings-mcp/tests/integration/: test_server_tools.py
withings-mcp/tests/unit/: test_auth.py  test_client.py  test_config.py  test_server.py
(+11 files in other folders)
