[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-mcp"
version = "0.1.0"
description = "MCP server for Garmin Connect workout management — create, schedule, and sync workouts to Garmin watches"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Aldred Coetzee" },
]
keywords = ["mcp", "garmin", "running", "workouts", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp[cli]>=1.25,<2",
    "garminconnect>=0.2",
    "garth>=0.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/aldred-coetzee/Pace-AI"
Repository = "https://github.com/aldred-coetzee/Pace-AI"
"Bug Tracker" = "https://github.com/aldred-coetzee/Pace-AI/issues"

[project.scripts]
garmin-mcp = "garmin_mcp.server:main"
garmin-mcp-login = "garmin_mcp.auth:login_cli"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["garmin_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring server startup",
]
asyncio_mode = "auto"
