[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pace-ai"
version = "0.1.0"
description = "Running coach intelligence layer — coaching prompts, methodology, goals, and training analysis via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Aldred Coetzee" },
]
dependencies = [
    "mcp[cli]>=1.25,<2",
    "python-dotenv>=1.0",
]

[project.scripts]
pace-ai = "pace_ai.server:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["pace_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring both servers running",
]
asyncio_mode = "auto"
