[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strava-mcp"
version = "0.1.0"
description = "A generic MCP server for Strava data access"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Aldred Coetzee" },
]
dependencies = [
    "mcp[cli]>=1.25,<2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
strava-mcp = "strava_mcp.server:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["strava_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real Strava credentials",
]
asyncio_mode = "auto"
